--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-8">
-										      			<p>University of Massachusetts Boston | Boston, MA, USA | GPA – 3.8/4.0</p>
+										      			<p>University of Massachusetts Boston | Boston, MA, USA</p>
 										      		</div>
 										      		<div class="col-md-4">
 										      			<p>August 2023 - December 2024</p>
@@ -455,7 +455,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									        <div class="panel-body">
 									            <div class="row">
 													<div class="col-md-8">
-														<p>Mahatma Gandhi Institute of Technology | Hyderabad, India | GPA – 3.1/4.0</p>
+														<p>Mahatma Gandhi Institute of Technology | Hyderabad, India</p>
 													</div>
 													<div class="col-md-4">
 														<p>July 2018 - July 2022</p>
